--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -6,6 +6,8 @@
   <button
     type="button"
     @todoAnimation
+    (@todoAnimation.start)="animationStarted($event)"
+    (@todoAnimation.done)="animationDone($event)"
     *ngFor="let item of items"
     (click)="removeItem(item)"
     class="list-group-item"
