--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,17 +1,19 @@
-<h2>Todos fadein & fadeout + bounceOutRight</h2>
+<div @todosAnimation>
+  <h2>Todos fadein & fadeout + bounceOutRight</h2>
 
-<input #itemInput class="form-control" (keyup.enter)="addItem(itemInput)" />
+  <input #itemInput class="form-control" (keyup.enter)="addItem(itemInput)" />
 
-<div *ngIf="items" class="list-group">
-  <button
-    type="button"
-    @todoAnimation
-    (@todoAnimation.start)="animationStarted($event)"
-    (@todoAnimation.done)="animationDone($event)"
-    *ngFor="let item of items"
-    (click)="removeItem(item)"
-    class="list-group-item"
-  >
-    {{ item }}
-  </button>
+  <div *ngIf="items" class="list-group">
+    <button
+      type="button"
+      @todoAnimation
+      (@todoAnimation.start)="animationStarted($event)"
+      (@todoAnimation.done)="animationDone($event)"
+      *ngFor="let item of items"
+      (click)="removeItem(item)"
+      class="list-group-item"
+    >
+      {{ item }}
+    </button>
+  </div>
 </div>
