9 files modified, 1 added

--- a/src/app/zippy/zippy.component.html
+++ b/src/app/zippy/zippy.component.html
@@ -1,3 +1,4 @@
+<h2>Zippy</h2>
 <div class="zippy">
   <div class="zippy-heading" [class.expanded]="isExpanded" (click)="toggle()">
     {{ title }}
