--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,34 @@
-<todos></todos>
+<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+  <div class="container-fluid">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarsExampleDefault"
+      aria-controls="navbarsExampleDefault"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-<keyframes></keyframes>
-
-<slide></slide>
-
-<!-- <zippy></zippy> -->
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <ul class="navbar-nav me-auto mb-2 mb-md-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="/todos">TodosAnimation</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/slide" routerLinkActive="active">slide</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/keyframes" routerLinkActive="active">Keyframes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/zippy" routerLinkActive="active">Zippy</a>
+        </li>
+      
+      </ul>
+    </div>
+  </div>
+</nav>
+<router-outlet class="todos"></router-outlet>
