--- a/src/app/zippy/zippy.component.html
+++ b/src/app/zippy/zippy.component.html
@@ -1,4 +1,5 @@
-<h2>Zippy</h2>
+
+
 <div class="zippy">
   <div class="zippy-heading" [class.expanded]="isExpanded" (click)="toggle()">
     {{ title }}
@@ -10,7 +11,9 @@
       }"
     ></span>
   </div>
-  <div class="zippy-body" [hidden]="!isExpanded">
+  <div
+  [@expandCollapse]="isExpanded ? 'expanded' : 'collapsed'"
+   class="zippy-body" >
     <ng-content></ng-content>
   </div>
 </div>
