3 files modified, 1 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
 
 <router-outlet class="todos"></router-outlet>
 
-<h2> Toggle this below ! </h2>
+<h2> Show-hidden animation content </h2>
 
 <zippy title="Reflexion">
   <p>
