--- a/src/app/zippy/zippy.component.html
+++ b/src/app/zippy/zippy.component.html
@@ -11,9 +11,12 @@
       }"
     ></span>
   </div>
+  
   <div
   [@expandCollapse]="isExpanded ? 'expanded' : 'collapsed'"
    class="zippy-body" >
-    <ng-content></ng-content>
+    <ng-content>
+      
+    </ng-content>
   </div>
 </div>
